# coding-exercises

./: README.md  main.py
100-doors/: main.py
99-green-bottles/: main.py
anagram-maker/: main.py
armstrong-numbers/: main.py
console-countdown/: main.py  pyproject.toml
console-quizbowl/: main.py  pyproject.toml  questions.py
fizzbuzz/: main.py
seven-segment-longest-word/: main.py  reference.py
