[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "ap-csp-create-task-consolequizbowl"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
termcolor = "^1.1"
colorama = "^0.4.3"
tabulate = "^0.8.6"
[tool.poetry.dev-dependencies]
